Update id generation for KafkaUser